--- a/src/main/webapp/WEB-INF/templates/index.vm
+++ b/src/main/webapp/WEB-INF/templates/index.vm
@@ -6,12 +6,78 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <select class="form-control">
+    <!-- 排名 -->
+    <canvas id="outageNumChart" style="width: 100%" height="400px"></canvas>
+    <select class="form-control" style="width: 60%" onchange="searchOutageInfo(this)">
         <option value="">请选择省份</option>
         #foreach($!province in $!provinceList)
             <option value="$!province.code">$!province.value</option>
         #end
     </select>
+
+    <script src="https://cdn.bootcss.com/jquery/2.1.2/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/Chart.js/2.7.0/Chart.min.js"></script>
+    <script>
+        $(function() {
+            rankInfo();
+        });
+
+        function searchOutageInfo(it) {
+            $.ajax({
+                url     : '$!rc.contextPath/outage/query.json',
+                type    : 'GET',
+                data    : {
+                    provinceCode : $(it).val()
+                },
+                dataType: 'JSON',
+                success : function(res) {
+                    $.each(res, function(index, val) {
+                        
+                    });
+                },
+                error : function () {
+                    alert('服务器异常~~');
+                }
+            });
+        }
+        
+        function rankInfo() {
+            $.ajax({
+                url     : '$!basePath/outage/rank.json',
+                type    : 'GET',
+                dataType: 'JSON',
+                success : function(res) {
+                    var province = new Array();
+                    var outageNum = new Array();
+                    $.each(res, function(index, val) {
+                        province[index] = val.provinceName;
+                        outageNum[index] = val.outageNum;
+                    });
+
+//                    province = new Array('dfdd','dfd2d','df3dd','dvfdd','df5dd');
+//                    outageNum = new Array('1','2','3','4','5');
+                    var chartData = {
+                        labels : province,
+                        datasets : [{data : outageNum}]
+                    };
+                    var ctx = $("#outageNumChart").get(0).getContext("2d");
+                    new Chart(ctx, {
+                        type: 'bar',
+                        data: chartData,
+                        options: {
+                            scaleStartValue : 0,
+                            scaleShowGridLines : false,
+                            responsive : false,
+                            scaleFontFamily : '微软雅黑'
+                        }
+                    });
+                },
+                error : function () {
+                    alert('服务器异常~~');
+                }
+            });
+        }
+    </script>
 </body>
 </html>
